[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
base64 = "0.21.2"
config = "0.13.3"
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.10.0"
ethers = "2.0.8"
ethers-signers = "2.0.8"
lazy_static = "1.4.0"
log = "0.4.14"
serde = "1.0.177"
serde_json = "1.0.104"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
