[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
base64 = "0.21.2"
config = "0.13.3"
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.10.0"
ethers = "2.0.8"
ethers-signers = "2.0.8"
lazy_static = "1.4.0"
log = "0.4.14"
rand = "0.8.5"
reqwest = "0.11.18"
serde = "1.0.177"
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-async-std", "postgres", "chrono", "bigdecimal"] }
chrono = "0.4.26"
bigdecimal = { version = "0.3.0", features = ["serde"]}
actix-service = "2.0.2"
futures = "0.3.28"
jwks-client = "0.2.0"
rs-firebase-admin-sdk = "1.2.1"
temp-env = "0.3.6"
